fixed some obvious layout problems

--- a/home.css
+++ b/home.css
@@ -23,8 +23,8 @@
   width: 50%;
 }
 header {
-  justify-content: space-between;
-  display: flex;
+  /* justify-content: space-between; */
+  /* display: flex; */
   align-self: baseline;
   position: absolute;
 }
@@ -52,16 +52,15 @@ a {
 }
 nav a {
   color: #00eeff;
-  background-color: #0d1012;
-  box-shadow: 0px 0px 10px #0f0e0e;
-  
-  padding: 10px;
-  /* border: 1px solid #00eeff; */
+
+  padding: 4px;
+  border: 1px solid #00eeff;
   border-radius: 10px;
   align-items: baseline;
   font-weight: 700;
   line-height: inherit;
   position: relative;
+  margin-left: 5px;
 }
 
 .navi{
@@ -123,8 +122,4 @@ p span {
 
   margin: 20px;
   box-shadow: 0px 0px 20px black;
-}
-
-section div a{
-  background-color: white
 }
