--- a/master.css
+++ b/master.css
@@ -6,7 +6,6 @@ body {
   background-color: #011214;
 }
 body {
- 
   font-family: "Quicksand";
   color: #000000;
   margin: auto;
@@ -18,7 +17,7 @@ header {
   /* align-items: baseline; */
   align-items: center;
   justify-content: space-between;
-  font-size: large;
+
   position: absolute;
   width: 100%;
   box-sizing: border-box;
@@ -41,7 +40,6 @@ li {
   margin-left: 10px;
 }
 footer {
- 
   background: linear-gradient(180deg, #e718182d, #86050533);
   color: white;
   padding-bottom: 50px;
@@ -50,26 +48,33 @@ footer {
   box-shadow: 0px 0px 20px black;
 }
 footer ul {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 footer li {
   margin: 1px;
   display: flex;
   height: 60px;
+  justify-items: center;
   width: 60px;
   margin: 20px 0px 5px 0px;
 }
-li a {
-  position: relative;
-  top: 22px;
-  margin-left: 10px;
+footer li a {
+  display: inline-block;
 }
 footer img {
-  width: 100%;
-  height: 100%;
+  position: relative;
+  width: 80%;
+  height: 80%;
+  display: block;
 }
 .port {
-  position: relative;
-  top: 25px;
+  margin: auto;
+  justify-content: center;
+}
+.port p {
+  display: inline;
+}
+footer li{
+align-items: center;
 }
