--- a/styles/placetheme.css
+++ b/styles/placetheme.css
@@ -14,3 +14,6 @@ main li div a{
 /* 
 contains colors and font related css code
  */
+ header {
+    font-size: small;
+ }
